Closed Bug 1418893 Opened 8 years ago Closed 8 years ago

nsDisplayMask with opacity does incorrect opacity flattening in some cases

Categories

(Core :: Graphics: WebRender, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla59
Tracking Status
firefox57 --- unaffected
firefox59 --- fixed

People

(Reporter: mstange, Assigned: ethlin)

References

Details

(Whiteboard: [wr-reserve])

Attachments

(2 files)

Steps to reproduce: 1. Enable WebRender. 2. Go to https://qz.com/ 3. Move your mouse over the big headline text. 4. Wait for the transition to the dark background to stop, and wait a second more. Expected results: The gigantic "Q" in the background should stay invisible while the headline is hovered. Actual results: After the fade animation, the Q appears again.
Attached file testcase
After the box has faded to white, it should stay white. But it becomes red again.
Whiteboard: [wr-mvp] [triage]
Whiteboard: [wr-mvp] [triage] → [wr-reserve]
It's a invalidation problem. I take a look.
Assignee: nobody → ethlin
Comment on attachment 8937921 [details] Bug 1418893 - Check opacity changes when computing mask's invalidation region. https://reviewboard.mozilla.org/r/208608/#review214426
Attachment #8937921 - Flags: review?(matt.woodrow) → review+
Pushed by ethlin@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/015cc4e8a9b8 Check opacity changes when computing mask's invalidation region. r=mattwoodrow
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
QA Whiteboard: [good first verify]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: