Bug 1418893 - Check opacity changes when computing mask's invalidation region. r=mattwoodrow

MozReview-Commit-ID: 54XDjoh67Mb

--HG--
extra : rebase_source : b8adaeb32f0d6a93b5a972cb939c526eb877d805